--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yt-app",
+  "name": "player-app",
   "version": "0.0.0",
   "license": "MIT",
   "angular-cli": {},
@@ -29,13 +29,22 @@
   },
   "devDependencies": {
     "angular-cli": "1.0.0-beta.9",
+    "broccoli-postcss": "^3.0.1",
     "codelyzer": "0.0.20",
+    "cssnano": "^3.7.3",
     "ember-cli-inject-live-reload": "1.4.0",
     "jasmine-core": "2.4.1",
     "jasmine-spec-reporter": "2.5.0",
     "karma": "0.13.22",
     "karma-chrome-launcher": "0.2.3",
     "karma-jasmine": "0.3.8",
+    "postcss": "^5.1.1",
+    "postcss-cssnext": "^2.7.0",
+    "postcss-extend": "^1.0.4",
+    "postcss-import": "^8.1.2",
+    "postcss-mixins": "^5.0.0",
+    "postcss-nested": "^1.0.0",
+    "postcss-simple-vars": "^3.0.0",
     "protractor": "3.3.0",
     "ts-node": "0.5.5",
     "tslint": "3.11.0",
