--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
     "systemjs": "0.19.26",
+    "youtube-simple-search": "^0.1.0",
     "zone.js": "0.6.12"
   },
   "devDependencies": {
