--- a/package.json
+++ b/package.json
@@ -13,21 +13,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^2.0.0-rc.5",
-    "@angular/compiler": "^2.0.0-rc.5",
-    "@angular/core": "^2.0.0-rc.5",
-    "@angular/forms": "0.3.0",
-    "@angular/http": "2.0.0-rc.5",
-    "@angular/platform-browser": "^2.0.0-rc.5",
-    "@angular/platform-browser-dynamic": "^2.0.0-rc.5",
-    "@angular/router": "3.0.0-rc.1",
-    "core-js": "^2.4.0",
-    "es6-shim": "0.35.1",
-    "reflect-metadata": "0.1.8",
-    "rxjs": "5.0.0-beta.6",
-    "systemjs": "0.19.31",
-    "youtube-simple-search": "^0.1.0",
-    "zone.js": "*"
+    "@angular/common": "2.0.0-rc.6",
+    "@angular/compiler": "2.0.0-rc.6",
+    "@angular/core": "2.0.0-rc.6",
+    "@angular/forms": "2.0.0-rc.6",
+    "@angular/http": "2.0.0-rc.6",
+    "@angular/platform-browser": "2.0.0-rc.6",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.6",
+    "@angular/router": "3.0.0-rc.2",
+
+    "core-js": "^2.4.1",
+    "reflect-metadata": "^0.1.3",
+    "rxjs": "5.0.0-beta.11",
+    "systemjs": "0.19.27",
+    "zone.js": "^0.6.17"
   },
   "devDependencies": {
     "angular-cli": "1.0.0-beta.10",
@@ -48,9 +47,9 @@
     "postcss-nested": "^1.0.0",
     "postcss-simple-vars": "^3.0.0",
     "protractor": "3.3.0",
-    "ts-node": "0.5.5",
-    "tslint": "3.11.0",
-    "typescript": "1.8.10",
+    "ts-node": "1.2.1",
+    "tslint": "3.13.0",
+    "typescript": "2.0.2",
     "typings": "0.8.1"
   }
 }
